@@ -14,7 +14,6 @@ package org.openhab.binding.linkplay.internal;
 
 import static org.openhab.binding.linkplay.internal.LinkPlayBindingConstants.*;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -29,7 +28,6 @@ import org.openhab.core.thing.binding.ThingHandler;
 import org.openhab.core.thing.binding.ThingHandlerFactory;
 import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
-import org.osgi.service.component.annotations.ConfigurationPolicy;
 import org.osgi.service.component.annotations.Reference;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -40,35 +38,48 @@ import org.slf4j.LoggerFactory;
  * @author Michael Cumming - Initial contribution
  */
 @NonNullByDefault
-@Component(service = ThingHandlerFactory.class, configurationPolicy = ConfigurationPolicy.OPTIONAL)
+@Component(configurationPid = "binding.linkplay", service = ThingHandlerFactory.class)
 public class LinkPlayHandlerFactory extends BaseThingHandlerFactory {
     private final Logger logger = LoggerFactory.getLogger(LinkPlayHandlerFactory.class);
 
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(THING_TYPE_DEVICE);
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_DEVICE);
 
     private final LinkPlayHttpClient httpClient;
     private final UpnpIOService upnpIOService;
 
     @Activate
-    public LinkPlayHandlerFactory(final @Reference LinkPlayHttpClient httpClient,
-            final @Reference UpnpIOService upnpIOService) {
+    public LinkPlayHandlerFactory(@Reference LinkPlayHttpClient httpClient, @Reference UpnpIOService upnpIOService) {
         this.httpClient = httpClient;
         this.upnpIOService = upnpIOService;
+        logger.debug("LinkPlay Handler Factory initialized");
     }
 
     @Override
     public boolean supportsThingType(ThingTypeUID thingTypeUID) {
-        return SUPPORTED_THING_TYPES_UIDS.contains(thingTypeUID);
+        boolean supported = SUPPORTED_THING_TYPES_UIDS.contains(thingTypeUID);
+        logger.debug("Thing type {} is{} supported", thingTypeUID, supported ? "" : " not");
+        return supported;
     }
 
     @Override
     protected @Nullable ThingHandler createHandler(Thing thing) {
         ThingTypeUID thingTypeUID = thing.getThingTypeUID();
+        logger.debug("Creating handler for thing type: {}", thingTypeUID);
 
         if (THING_TYPE_DEVICE.equals(thingTypeUID)) {
             return new LinkPlayThingHandler(thing, httpClient, upnpIOService);
         }
 
+        logger.debug("No handler created for unsupported thing type: {}", thingTypeUID);
         return null;
+    }
+
+    @Override
+    protected void removeHandler(ThingHandler thingHandler) {
+        if (thingHandler instanceof LinkPlayThingHandler) {
+            logger.debug("Disposing LinkPlay handler for thing {}", thingHandler.getThing().getUID());
+            ((LinkPlayThingHandler) thingHandler).dispose();
+        }
+        super.removeHandler(thingHandler);
     }
 }
